@@ -68,6 +68,7 @@ Import-Package: com.mysql.jdbc;version="3.1.13",
  org.jdom.input,
  org.jdom.output,
  org.json,
+ org.mozilla.intl.chardet,
  org.osgi.framework;version="1.3.0",
  org.osgi.service.http,
  org.osgi.util.tracker;version="1.3.3",
